// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SliderItem renders correctly 1`] = `
<div
  className="slider-item"
>
  <img
    alt="Episode 6 Title"
    className="slider-item__image"
    src="url"
  />
  <div
    className="slider-item__container"
  >
    <div
      className="slider-item__title"
    >
      Episode 6 Title
    </div>
    <div
      className="slider-item__subtitle"
    >
      subtitle
    </div>
  </div>
</div>
`;

exports[`SliderItem renders correctly 2`] = `
<div
  className="slider-item"
>
  <img
    alt="Series 1 Title"
    className="slider-item__image"
    src="url"
  />
  <div
    className="slider-item__container"
  >
    <div
      className="slider-item__title"
    >
      Series 1 Title
    </div>
    <div
      className="slider-item__subtitle"
    >
      10 episodes
    </div>
  </div>
</div>
`;

exports[`SliderItem renders correctly 3`] = `
<div
  className="slider-item slider-item--selected"
>
  <img
    alt="Episode 19 Title"
    className="slider-item__image"
    src=""
  />
  <div
    className="slider-item__container"
  >
    <div
      className="slider-item__title"
    >
      Episode 19 Title
    </div>
    <div
      className="slider-item__subtitle"
    >
      subtitle
    </div>
  </div>
</div>
`;
